[tool.poetry]
name = "wordle-github-contributions"
version = "0.1.0"
description = "Generates your monthly GitHub Contributions as a Wordle grid"
authors = [
    "Venu Vardhan Reddy Tekula <venuvardhanreddytekula8@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
